# rose-memory-skeletons

./: README.md
extractMemorySkeleton/: .gitattributes  .gitignore  .svnignore  AstSpecificProcessing.h  Makefile  Makefile.am  MemoryAccessSignatures.cc  MemoryAccessSignatures.h  SageTools.cc  SageTools.h  TODO  Utils.cc  Utils.h  extractMemorySkeleton.cc  processPragmas.cc
extractMemorySkeleton/anti-tests/: switch.c
extractMemorySkeleton/processPragmas/: processPragmas.cc
extractMemorySkeleton/processPragmas/tests/: rose_heap.c
extractMemorySkeleton/rts-simple/include/: rts-simple.h
extractMemorySkeleton/rts-simple/src/: Makefile  array-access-2d.c  example1.c  example2.c  example3.c  example4.c  example5.c  for-array-2d.c  gups.in  gups_serial.c  gups_serial.in  jacobi.c  jacobi.in  lvalue.c  rose_for-array-2d.in  rose_gups_serial.in  rose_jacobi.in  rts-simple.c
extractMemorySkeleton/rts-trace/include/: trace.h
extractMemorySkeleton/rts-trace/src/: Makefile  example1.c  example2.c  example3.c  example4.c  gups_serial.c  trace.c
extractMemorySkeleton/tests/: Makefile.am  Makefile.common  Makefile.manual
extractMemorySkeleton/tests/heap/: a.out  heap.c  heap_skel.c
extractMemorySkeleton/tests/simple/: Makefile  a.out  array-access-1d.c  array-access-2d.c  array-access-3d.c  array-malloc-1d.c  array-malloc-2d.c  array-malloc-3d.c  array-write-1d.c  array-write-2d.c  array-write-3d.c  assignop.c  branching.c  decl-init.c  do-while.c  files  for-array-1d.c  for-array-2d.c  for-array-3d.c  for-array.c  for.c  fun-call-1arg.c  fun-call-2args.c  fun-call-4args.c  fun-call-noargs.c  function-ptr.c  global_init.c  if-then-else.c  if-then.c  lulesh-short.cc  member-object.cc  printf.c  struct-access-arrow.c  struct-access-dot.c  struct.c  while.c
extractMemorySkeleton/tests/simple_fortran/: Makefile  array-access-1d.f90  (+4 more)
(+55 files in other folders)
